--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon --inspect index.js"
   },
   "dependencies": {
     "better-sqlite3": "^7.5.0",
@@ -17,5 +18,8 @@
     "moment": "^2.29.1",
     "prompt": "^1.2.1",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
