--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "private": true,
   "scripts": {
     "deploy": "cd packages/web && yarn build && cd ../server && yarn start"
-  }
+  },
+  "workspaces": ["packages/web", "packages/server"]
 }
