--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "parse": "node scripts/parse.js",
     "start": "node index.js",
     "dev": "nodemon --inspect index.js"
   },
